--- a/src/cases/templates/cases/base.html
+++ b/src/cases/templates/cases/base.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/0602785373.js" crossorigin="anonymous"></script> <!--font awesome-->
     <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.7"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
@@ -19,7 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
     
     <!-- for my js -->
-
+    <script src="{% static 'js/upload.js' %}"></script>
     <!-- for my css -->
     <link rel="stylesheet" href="{% static 'css/article.css' %}">
     <link rel="stylesheet" href="{% static 'css/card.css' %}">
